--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             class="w-full max-w-4xl mx-auto grid grid-cols-2 sm:grid-cols-3 xl:grid-cols-4 gap-6 place-content-center p-4">
         </div>
     </main>
-    <script src="/script.js"> </script>
+    <script src="./script.js"> </script>
 </body>
 
 </html>
